# gilded-rose-haskell-solution

./: .gitignore  README.md  gilded-rose.cabal  prop.tix
src/: ImprovedGildedRose.lhs
test/: GildedRoseProp.lhs  Prop.hs  Spec.hs
