name:                gilded-rose
version:             0.1.0.0
synopsis:            Haskell-port of the gilded rose kata
license:             GPL
author:              Sven Heyll
maintainer:          sven.heyll@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   GildedRose,
                     ImprovedGildedRose
  build-depends:     base 
                   , QuickCheck
  ghc-options:       -Wall -fhpc
  hs-source-dirs:    src
  default-language:  Haskell2010


executable gilded-rose
  main-is:           Main.hs
  build-depends:     gilded-rose, base 
  hs-source-dirs:    src
  default-language:  Haskell2010


test-suite prop
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -fhpc
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Prop.hs
  other-modules:     GildedRoseProp
  build-depends:     base 
                   , gilded-rose
                   , QuickCheck 
